WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185428
[MIPS] Collect callee-saved register using inline assembly
https://bugs.webkit.org/show_bug.cgi?id=185428
Summary
[MIPS] Collect callee-saved register using inline assembly
Dominik Inführ
Reported
2018-05-08 10:21:39 PDT
[MIPS] Collect callee-saved register using inline assembly
Attachments
Patch
(1.87 KB, patch)
2018-05-08 10:25 PDT
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Inführ
Comment 1
2018-05-08 10:25:53 PDT
Created
attachment 339829
[details]
Patch
EWS Watchlist
Comment 2
2018-05-08 10:27:58 PDT
Attachment 339829
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/RegisterState.h:143: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/JavaScriptCore/heap/RegisterState.h:143: The parameter name """" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2018-05-08 23:29:10 PDT
Comment on
attachment 339829
[details]
Patch Clearing flags on attachment: 339829 Committed
r231547
: <
https://trac.webkit.org/changeset/231547
>
WebKit Commit Bot
Comment 4
2018-05-08 23:29:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-05-08 23:30:42 PDT
<
rdar://problem/40084203
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug