[MIPS] Collect callee-saved register using inline assembly https://bugs.webkit.org/show_bug.cgi?id=185428

Patch by Dominik Infuehr <dinfuehr@igalia.com> on 2018-05-08
Reviewed by Yusuke Suzuki.

MIPS used setjmp instead of collecting registers with inline assembly like
other architectures.

* heap/RegisterState.h:

Canonical link: https://commits.webkit.org/200936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231547 268f45cc-cd09-0410-ab3c-d52691b4dbfc